fix: styling and alignment
Fixed issues with styling and alignment for responsive Website

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     border-radius: 0.5rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
 
 .oneside {
@@ -744,16 +744,19 @@ body {
 }
 
 .footer {
+    padding:1rem;
+    font-size: large;
     grid-area: footer;
     color: var(--text-color);
     background-color: var(--background-color);
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
 }
-
-.list-hide .fa-times, .list-hide .fa-bars{
-    display:none;
+.footer a.footer-link{
+    text-decoration: none;
+    color:var(--text-color);
 }
+
 
 /* -----Responsiveness--------- */
 @media only screen and (max-width:1000px) {
@@ -775,6 +778,12 @@ body {
             "nav main"
             "nav main"
             "footer footer";
+    }
+    .nav .nav-item{
+        font-size: 1.1rem;
+    }
+    .nav .nav-list li{
+        padding:1rem 0.5rem;
     }
 
     #image .img-feat {
